# python-sandbox

./: .envrc  .envrc.local.example  .gitignore  .pre-commit-config.yaml  Brewfile  Makefile  README.md  cspell.config.yaml  readme.md
.github/workflows/: setuptools-flat.yml  setuptools-src.yml  sode-manual.yml  sode-python.yml
_pytest-colocated/: readme.md
_pytest-test-dir/: readme.md
awslambda/: .gitignore  readme.md
awslambda-terraform/: main.tf  readme.md
awslambda/scripts/: build.sh  delete-role.sh
conway/: .env  .gitignore
conway/src/: greeter.py
doc/: tools.md
env-pipenv/: main.py  readme.md
env-pyenv/: .gitignore  main.py
make.d/: homebrew.mk
packaging-builtins/: .gitignore  test_clock.py
pytest/: Pipfile  dotenv-template  readme.md  research.md
pytest-application-pythonpath/: Pipfile  readme.md
pytest-application-pythonpath/src/: greeter.py
pytest-application-pythonpath/tests/: test_greeter.py
pytest-christoph/: readme.md
pytest-colocated/: Pipfile  main.py
pytest-hana/: readme.md
pytest-pierce/: readme.md
pytest/herald/: greeter_test.py
shark-rover/: led_flash.py
src/python/: cspell.config.yaml
src/python/awslambda/: README.md  lambda_function.py
src/python/awslambda-terraform/: .gitignore  README.md  lambda_function.py  main.tf
src/python/awslambda-terraform/scripts/: build.sh  run-function.sh
src/python/awslambda/scripts/: create-function.sh  create-role.sh  delete-function.sh  list-functions.sh  run-function.sh
src/python/conway/: Pipfile  README.md  code-retreat.md  readme.md
src/python/conway/src/: greeter.py
src/python/conway/tests/: greeter_test.py
src/python/env-pipenv/: README.md  clock.py  mainpipenv.py
src/python/env-pyenv/: README.md  clock.py  clockpyenv.py  mainpyenv.py  readme.md  requirements.txt  test_clock.py
src/python/pytest/: README.md
src/python/pytest-application-pythonpath/: README.md  main.py  readme.md
src/python/pytest-application-pythonpath/tests/: test_greeter.py
src/python/pytest-colocated/: README.md  main.py  pytest.ini  readme.md
src/python/pytest/herald/: greeter_test.py
src/python/pytest/scripts/: init_env.py
src/python/setuptools-flat/: .gitignore  Brewfile  Makefile  Pipfile  README.md  pyproject.toml
src/python/setuptools-flat/setuptoolsflat/: _version.py  cli.py  greeting.py  marvin.py  version
src/python/setuptools-src/: Makefile  Pipfile  README.md  pyproject.toml
src/python/setuptools-src/src/setuptoolssrc/: _version.py  cli.py  marvin.py
src/python/shark-rover/: README.md  external_led_flash.py  led_duty_cycle.py  led_flash.py
src/python/terraform-cloudformation/: README.md  sns-template.json
src/python/terraform-cloudformation/scripts/: describe-stack-resources.sh
src/python/unittest-greeter/: README.md  greeter.py  mathunittest.py  test_greeter.py  test_math.py
src/sode/: Brewfile  Makefile  cspell.config.yaml
src/sode/manual/: Brewfile  Makefile  README.md  sode-fs-find.1.md  sode-fs-find.7.md  sode-fs.1.md  sode-soundcloud-authorize.1.md  sode-soundcloud.1.md  sode.1.md
src/sode/python/: .editorconfig  .env  .envrc  .gitignore  .isort.cfg  Brewfile  Makefile  Pipfile  README.md  cspell.config.yaml  pyproject.toml  setup.py  sode.py
src/sode/python/doc/: code-structure.md
src/sode/python/make.d/: black.mk  isort.mk  mypy.mk  sdist.mk  wheel.mk
src/sode/python/sode/: cli.py  version.py
src/sode/python/sode/cli/: args.py  command.py  main.py  option.py  parser.py  state.py
src/sode/python/sode/cli/args/: fs.py  root.py
src/sode/python/sode/fs/: __init__.py  cli.py  find.py  namespace.py
src/sode/python/sode/greet/: cli.py
src/sode/python/sode/shared/: attr.py  either.py
src/sode/python/sode/shared/cli/: __init__.py  argfactory.py  cmdfactory.py  factory.py  format.py  namespace.py  option.py  state.py
src/sode/python/sode/shared/fp/: __init__.py  either.py  option.py
src/sode/python/sode/shared/oauth/: __init__.py  token.py
src/sode/python/sode/shared/state/: path.py  state.py
src/sode/python/sode/soundcloud/: __init__.py  auth.py  authapi.py  authcmd.py  cli.py  config.py  jsonproto.py  playlist.py  thing.py  track.py
src/sode/python/sode/soundcloud/auth/: __init__.py  api.py  cli.py  namespace.py
src/sode/python/sode/soundcloud/track/: __init__.py  cli.py  list.py
src/sode/python/src/: setup.py
src/sode/sh/: Makefile  README.md  sode-argcomplete.sh
terraform-cloudformation/: main.tf  readme.md
terraform-cloudformation/scripts/: create-stack.sh  delete-stack.sh  list-sns-topics.sh  list-stacks.sh
unittest-greeter/: math.py  test_greeter.py  test_math.py
