# https://setuptools.pypa.io/en/latest/userguide/quickstart.html#basic-use
[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools"]

[project]
dependencies = []
dynamic = ["version"]
name = "setuptoolsflat"

[project.scripts]
marvin = "setuptoolsflat.cli:main"

[tool.setuptools.dynamic]
version = { attr = "setuptoolsflat._version.__version__" }

[tool.setuptools.package-data]
setuptoolsflat = ['version']
