# https://setuptools.pypa.io/en/latest/userguide/quickstart.html#basic-use
[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools"]

[project]
dependencies = []
dynamic = ["version"]
name = "setuptoolsflat"

[project.scripts]
marvin = "setuptoolsflat.cli:main"

# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html#dynamic-metadata
[tool.setuptools.dynamic]
version = { attr = "setuptoolsflat._version.__version__" }
