# https://setuptools.pypa.io/en/latest/userguide/quickstart.html#basic-use
[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools"]

[project]
dependencies = []
dynamic = ["version"]
name = "setuptoolssrc"

[project.scripts]
marvin = "setuptoolssrc.cli:main"

# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html#dynamic-metadata
[tool.setuptools.dynamic]
version = { attr = "setuptoolssrc._version.__version__" }
