# https://setuptools.pypa.io/en/latest/userguide/quickstart.html#basic-use
[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools"]

[project]
dependencies = []
dynamic = ["version"]
name = "sode"

[project.scripts]
sode = "sode.cli:main"

# https://black.readthedocs.io/en/stable/usage_and_configuration/the_basics.html#configuration-via-a-file
[tool.black]
line-length = 100

# https://mypy.readthedocs.io/en/stable/config_file.html
[tool.mypy]
strict = false

["tool.mypy-sode.*"]
packages = ["sode"]
python_version = "3.13"
strict = true
verbosity = 0
warn_unused_configs = true

# https://pycqa.github.io/isort/docs/configuration/config_files.html
# https://pycqa.github.io/isort/docs/configuration/options.html
[tool.isort]
line_length = 100
profile = 'black'

# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html#dynamic-metadata
[tool.setuptools.dynamic]
version = { attr = "sode._version.__version__" }
