# https://setuptools.pypa.io/en/latest/userguide/quickstart.html#basic-use
[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools"]

[project]
dependencies = []
dynamic = ["version"]
name = "sode"

[project.scripts]
sode = "sode.cli.main:main"

# https://black.readthedocs.io/en/stable/usage_and_configuration/the_basics.html#configuration-via-a-file
[tool.black]
line-length = 100
target-version = ["py313"]

# isort has its own file (.isort.cfg) because pre-commit hook does not read this file
# https://pycqa.github.io/isort/docs/configuration/config_files.html#isortcfg-preferred-format

# https://mypy.readthedocs.io/en/stable/config_file.html
[tool.mypy]
packages = ["sode"]
python_version = "3.13"
strict = true
verbosity = 0
warn_unused_configs = true

# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html#dynamic-metadata
[tool.setuptools.dynamic]
version = { attr = "sode._version.__version__" }
